rust/foxglove/src/protocol/v2/snapshots/foxglove__protocol__v2__client__tests__ping_encode.snap
---
source: rust/foxglove/src/protocol/v2/client.rs
expression: "format!(\"{:#04x?}\", buf)"
---
[
    0x04,
    0x31,
    0x32,
    0x33,
    0x34,
    0x35,
    0x36,
    0x37,
    0x38,
    0x39,
    0x30,
]
