rust/foxglove/src/protocol/v2/snapshots/foxglove__protocol__v2__client__tests__ping_encode_empty_payload.snap
---
source: rust/foxglove/src/protocol/v2/client.rs
expression: "format!(\"{:#04x?}\", buf)"
---
[
    0x04,
]
