rust/foxglove/src/protocol/v2/snapshots/foxglove__protocol__v2__client__tests__subscribe_encode.snap
---
source: rust/foxglove/src/protocol/v2/client.rs
assertion_line: 248
expression: "format!(\"{:#04x?}\", buf)"
---
[
    0x04,
    0x03,
    0x00,
    0x00,
    0x00,
    0x0a,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x14,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x1e,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
]
