rust/foxglove/src/protocol/v2/snapshots/foxglove__protocol__v2__client__tests__unsubscribe_encode.snap
---
source: rust/foxglove/src/protocol/v2/client.rs
assertion_line: 257
expression: "format!(\"{:#04x?}\", buf)"
---
[
    0x05,
    0x03,
    0x00,
    0x00,
    0x00,
    0x01,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x02,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x03,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
]
